@@ -1,4 +1,6 @@
-add_library( fdm_f16 STATIC
+set( MODULE_NAME fdm_f16 )
+
+set( CPP_FILES
     f16_Aerodynamics.cpp
     f16_Aircraft.cpp
     f16_Controls.cpp
@@ -8,3 +10,5 @@ add_library( fdm_f16 STATIC
     f16_Mass.cpp
     f16_Propulsion.cpp
 )
+
+add_library( ${MODULE_NAME} STATIC ${CPP_FILES} )
