@@ -1,4 +1,8 @@
-add_library( hid STATIC
+set( MODULE_NAME hid )
+
+set( CPP_FILES
     hid_Joysticks.cpp
     hid_Manager.cpp
 )
+
+add_library( ${MODULE_NAME} STATIC ${CPP_FILES} )
