@@ -1,3 +1,13 @@
+2020-05-24 Marek M. Cel <marekcel@marekcel.pl>
+    
+    * CMake fix for use selective Qt4 or Qt5
+    
+    * time step statistics
+    
+    * PID setting value fix
+
+
+
 2020-05-17 Marek M. Cel <marekcel@marekcel.pl>
     
     * units ID strings
